@@ -3,7 +3,7 @@
 
 // phpMyAdmin Türkçe (Turkish)
 // Çeviren Burak Yavuz (BouRock)
-// Çeviri phpMyAdmin 2.11.9.5, 3.2.2 ve 3.3 sürümüne uygundur.
+// Çeviri phpMyAdmin 2.11.10, 3.2.5 ve 3.3 sürümüne uygundur.
 
 $charset = 'utf-8';
 $text_dir = 'ltr'; // ('ltr' for left to right, 'rtl' for right to left)
@@ -18,11 +18,11 @@ $mysql_4_1_doc_lang = 'tr';
 $mysql_5_0_doc_lang = 'tr';
 $mysql_5_1_doc_lang = 'tr';
 
-$day_of_week = array('Pazar', 'Pazartesi', 'Salı', 'Çarşamba', 'Perşembe', 'Cuma', 'Cumartesi');
-$month = array('Ocak', 'Şubat', 'Mart', 'Nisan', 'Mayıs', 'Haziran', 'Temmuz', 'Ağustos', 'Eylül', 'Ekim', 'Kasım', 'Aralık');
+$day_of_week = array('Paz', 'Ptesi', 'Salı', 'Çar', 'Per', 'Cu', 'Ctesi');
+$month = array('Ocak', 'Şubat', 'Mart', 'Nis', 'May', 'Haz', 'Tem', 'Ağu', 'Eylül', 'Ekim', 'Kas', 'Ara');
 // See http://www.php.net/manual/en/function.strftime.php to define the
 // variable below
-$datefmt = '%d %B %Y saat %H:%M:%S';
+$datefmt = '%d %B %Y, %H:%M:%S';
 $timespanfmt = '%s gün, %s saat, %s dakika ve %s saniye';
 
 $strAbortedClients = 'İptal edilen';
@@ -157,6 +157,8 @@ $strCheckPrivs = 'Yetkileri kontrol et';
 $strCheck = 'Seç';
 $strCheckTable = 'Tabloyu kontrol et';
 $strChoosePage = 'Lütfen düzenlemek için sayfa seçin';
+$strClickToSelect = 'Seçmek için tıklayın'; 
+$strClickToUnselect = 'Seçimi kaldırmak için tıklayın';
 $strColComFeat = 'Sütun Yorumları gösteriliyor';
 $strCollation = 'Karşılaştırma';
 $strColumnNames = 'Sütun adları';
@@ -186,12 +188,13 @@ $strCopyTable = 'Tabloyu şuna (veritabanı<b>.</b>tablo) kopyala:';
 $strCouldNotConnectSource = 'Kaynağa bağlanamadı';
 $strCouldNotConnectTarget = 'Hedefe bağlanamadı';
 $strCouldNotKill = 'phpMyAdmin %s işlemini sonlandıramadı. Muhtemelen zaten kapatılmış.';
+$strCreate = 'Oluştur';
 $strCreateDatabaseBeforeCopying = 'Kopyalamadan önce CREATE DATABASE (Veritabanı Oluştur)';
 $strCreateIndex = '&nbsp;%s&nbsp;sütunda indeks oluştur.';
 $strCreateIndexTopic = 'Yeni bir indeks oluştur';
 $strCreateNewDatabase = 'Yeni veritabanı oluştur';
 $strCreateNewTable = '%s veritabanında yeni tablo oluştur';
-$strCreate = 'Oluştur';
+$strCreateNewTableShort = 'Yeni tablo oluştur';
 $strCreatePage = 'Yeni bir sayfa oluştur';
 $strCreatePdfFeat = 'PDF\'lerin oluşturulması';
 $strCreateRelation = 'İlişki oluştur';
@@ -245,10 +248,11 @@ $strDefragment = 'Tabloyu birleştir';
 $strDelayedInserts = 'Gecikmiş eklemeleri kullan';
 $strDeleteAndFlushDescr = 'Bu en temiz yoldur fakat yetkileri yeniden yüklemek zaman alabilir.';
 $strDeleteAndFlush = 'Kullanıcıları sil ve sonra da yetkileri yeniden yükle.';
+$strDelete = 'Sil';
 $strDeleted = 'Satır silindi';
 $strDeleteNoUsersSelected = 'Silmek için kullanıcı seçilmedi!';
 $strDeleteRelation = 'İlişkiyi sil';
-$strDelete = 'Sil';
+$strDeleteTrackingData = 'Bu tabloyu izleme verisini sil';
 $strDeleting = '%s siliniyor';
 $strDelimiter = 'Sınırlayıcı';
 $strDelOld = 'Şu anki sayfa, daha fazla bulunması gereksiz tablolara verilmiş referanslara sahip. Bu referansları silmek ister misiniz?';
@@ -258,6 +262,7 @@ $strDesignerHelpDisplayField = 'Görüntü alanı pembe ile gösterilir. Alanı,
 $strDesigner = 'Tasarımcı';
 $strDetails = 'Ayrıntılar...';
 $strDictionary = 'sözlük';
+$strDifference = 'Farkı';
 $strDirectLinks = 'Doğrudan bağlantılar';
 $strDirtyPages = 'Bozuk sayfalar';
 $strDisabled = 'Etkisiz';
@@ -274,6 +279,7 @@ $strDoYouReally = 'Aşağıdaki komutu uygulamak istediğinize emin misiniz? ';
 $strDropDatabaseStrongWarning = 'Bütün bir veritabanını YOK ETMEK üzeresiniz!';
 $strDrop = 'Kaldır';
 $strDropUsersDb = 'Kullanıcılarla aynı isimlerde olan veritabanlarını kaldır.';
+$strDumpAllRows = 'Tüm satırları yığınla';
 $strDumpingData = 'Tablo döküm verisi';
 $strDumpSaved = 'Döküm dosyası %s dosyasına kaydedildi';
 $strDumpXRows = '%s satır dökümü, %s. kayıttan başlıyor.';
@@ -371,6 +377,7 @@ $strGzip = '"gzip olarak"';
 
 $strHandler = 'Denetimci';
 $strHasBeenAltered = 'değiştirildi.';
+$strHaveBeenSynchronized = 'Seçili hedef tablolar kaynak tablolar ile eşitlendi.';
 $strHaveToShow = 'Görüntülemek için en az bir sütun seçmelisiniz';
 $strHebrew = 'İbranice';
 $strHelp = 'Yardım';
@@ -432,6 +439,7 @@ $strInnodbStat = 'InnoDB Durumu';
 $strInsecureMySQL = 'Yapılandırma dosyanız varsayılan MySQL yetkili hesapla uyuşan ayarlar (parolasız root) içeriyor. MySQL sunucunuz bu varsayılan, dışardan girişe açık ayarlarla çalışıyor ve bu güvenlik açığını gerçekten düzeltmeniz gerekmektedir.';
 $strInsertAsNewRow = 'Yeni satır olarak ekle';
 $strInsertedRowId = 'Eklenen satır id: %1$d';
+$strInsertIgnoreAsNewRow = 'Yeni satır olarak ekle ve hataları yoksay';
 $strInsert = 'Ekle';
 $strInterface = 'Arabirim';
 $strInternalAndForeign = 'FOREIGN KEY bağlantısının yerini tutan bir bağlantı varken dahili bağlantı mümkün değildir.';
@@ -454,6 +462,7 @@ $strInvalidServerIndex = 'Geçersiz sunucu indeksi: "%s"';
 $strInvalidTableName = 'Geçersiz tablo adı';
 
 $strJapanese = 'Japonca';
+$strJavascriptDisabled = 'Javascript desteği eksik ya da tarayıcınızda etkisizleştirilmiş, bazı phpMyAdmin işevselliği eksik olacaktır. Örneğin rehber çerçeveyi otomatik olarak yenilemeyecek.';
 $strJoins = 'Birleştirmeler';
 $strJumpToDB = '&quot;%s&quot; veritabanına git.';
 $strJustDeleteDescr = '&quot;Silinmiş&quot; kullanıcılar, yetkiler yeniden yüklenene kadar her zaman olduğu gibi sunucuya hala erişilebileceklerdir.';
@@ -545,6 +554,7 @@ $strMySQLShowProcess = 'İşlemleri göster';
 
 $strName = 'İsim';
 $strNavTableFilter = 'Süzgeç';
+$strNewTable = 'Yeni tablo';
 $strNext = 'İleri';
 $strNoActivity = '%s saniye içinde hiçbir işlem yapılmadı, lütfen yeniden oturum açın';
 $strNoDatabasesSelected = 'Veritabanı seçilmedi.';
@@ -574,6 +584,7 @@ $strNoTablesFound = 'Veritabanında tablo bulunamadı.';
 $strNoThemeSupport = 'Tema desteği yok, lütfen yapılandırmanızı ve/veya %s dizinindeki temalarınızı kontrol edin.';
 $strNotNumber = 'Bu bir sayı değil!';
 $strNotOK = 'TAMAM değil';
+$strNotPresent = 'mevcut değil';
 $strNotSet = '<b>%s</b> tablosu bulunamadı veya %s içinde ayarlanmadı';
 $strNoUsersFound = 'Kullanıcı(lar) bulunamadı.';
 $strNoValidateSQL = 'SQL Onaylamayı atla';
@@ -639,6 +650,8 @@ $strPBXTTransactionBufferSize = 'İşlem arabellek boyutu';
 $strPdfDbSchema = ' "%s" veritabanının şeması - Sayfa %s';
 $strPdfInvalidTblName = ' "%s" tablosu yok!';
 $strPdfNoTables = 'Tablolar yok';
+$strPDFPageCreated = 'Sayfa oluşturuldu';
+$strPDFPageCreateFailed = 'Sayfa oluşturma başarısız';
 $strPDF = 'PDF';
 $strPDFReportExplanation = '(Tek tablonun verisini içeren bir rapor üretir)';
 $strPDFReportTitle = 'Rapor başlığı';
@@ -653,6 +666,11 @@ $strPhp = 'PHP Kodu oluştur';
 $strPHPVersion = 'PHP Sürümü';
 $strPlayAudio = 'Ses çal';
 $strPleaseSelectPrimaryOrUniqueKey = 'Lütfen birincil anaktarı veya benzersiz anahtarı seçin';
+$strPmadbCreateConfig = '(<code>config.inc.php</code>) yapılandırma dosyasında gelişmiş özellikler etkin, örneğin <code>config.sample.inc.php</code> dosyasından başlayarak.';
+$strPmadbCreateHelp = 'Gelişmiş özellikleri kurmak için hızlı adımlar:';
+$strPmadbCreateTables = 'Gerekli tabloları <code>script/create_tables.sql</code> ile oluştur.';
+$strPmadbCreateUser = 'Pma kullanıcısı oluştur ve bu tablolara erişim ver.';
+$strPmadbReLoginToEnable = 'Güncellenmiş yapılandırma dosyasını yüklemek için phpMyAdmin\'e yeniden oturum açın.';
 $strPmaDocumentation = 'phpMyAdmin belgeleri';
 $strPmaUriError = '<tt>$cfg[\'PmaAbsoluteUri\']</tt> talimatı yapılandırma dosyanız içinde AYARLANMAK zorundadır!';
 $strPolish = 'Polonyaca';
@@ -716,9 +734,10 @@ $strPutColNames = 'İlk satır içine alan adlarını koy';
 $strQBEDel = 'Del';
 $strQBEIns = 'Ins';
 $strQBE = 'Sorgu';
+$strQueriesExecuted = 'Aşağıdaki sorgular çalıştırıldı:';
 $strQueryCache = 'Sorgu önbelleği';
 $strQueryFrame = 'Sorgu penceresi';
-$strQueryOnDb = '<b>%s</b> veritabanında SQL sorgusu:';
+$strQueryOnDb = '<b>%s</b> veritabanındaki SQL sorgusu:';
 $strQueryResultsOperations = 'Sorgu sonuçları işlemleri';
 $strQuerySQLHistory = 'SQL geçmişi';
 $strQueryStatistics = '<b>Sorgu istatistikleri</b>: Başlangıçtan beri sunucuya %s sorgu gönderildi.';
@@ -742,6 +761,7 @@ $strRelationsForTable = 'TABLO İLİŞKİLERİ';
 $strRelations = 'İlişkiler';
 $strRelationView = 'İlişki görünümü';
 $strReloadingThePrivileges = 'Yetkiler yeniden yükleniyor';
+$strReloadNavi = 'Rehber çerçeveyi yeniden yükle';
 $strReloadPrivileges = 'Yetkileri yeniden yükle';
 $strReload = 'Yeniden Yükle';
 $strRemoteServer = 'Uzak sunucu';
@@ -751,6 +771,7 @@ $strRemoveSelectedUsers = 'Seçili kullanıcıları kaldır';
 $strRenameDatabaseOK = '%s veritabanı %s olarak yeniden adlandırıldı';
 $strRenameTableOK = '%s tablosu %s olarak yeniden adlandırıldı';
 $strRenameTable = 'Tabloyu yeniden şuna adlandır';
+$strRenameView = 'Görünümü yeniden şuna adlandır';
 $strRepair = 'Onar';
 $strRepairTable = 'Tabloyu onar';
 $strReplaceNULLBy = 'NULL\'u bunla değiştir:';
@@ -780,6 +801,7 @@ $strReplicationSlaveConfiguration = 'Slave yapılandırması';
 $strReplicationSlaveConfigured = 'Sunucu kopya etme işlemi sırasında slave sunucu olarak yapılandırıldı. Bunu istiyor musunuz:';
 $strReplicationSlaveErrorManagement = 'Hata yönetimi:';
 $strReplicationSlaveIOThread = 'Sadece G/Ç İşlemi %s';
+$strReplicationSlaveIOThreadNotRunning = 'Slave G/Ç işlemi çalışmıyor!';
 $strReplicationSlaveNotConfigured = 'Bu sunucu kopya etme işlemi sırasında slave sunucu olarak yapılandırılmadı. Bunu <a href="%s">yapılandırmak</a> ister misiniz?';
 $strReplicationSlaveReset = 'Slave\'i sıfırla';
 $strReplicationSlaveSeeStatus = 'Slave durum tablosuna bak';
@@ -787,6 +809,7 @@ $strReplicationSlaveSkipCurrentError = 'Şu anki hatayı atla';
 $strReplicationSlaveSkipNextErrors = 'hata.';
 $strReplicationSlaveSkipNext = 'İleri atla';
 $strReplicationSlave = 'Slave kopya etme';
+$strReplicationSlaveSQLThreadNotRunning = 'Slave SQL işlemi çalışmıyor!';
 $strReplicationSlaveSQLThread = 'Sadece SQL İşlemi %s';
 $strReplicationStatusInfo = 'Bu MySQL sunucusu <b>kopya etme</b> işlemleri içinde %s olarak çalışır. Sunucudaki kopya etme durumuyla ilgili daha ayrıntılı bilgi için lütfen <a href="#replication">kopya etme bölümünü</a> ziyaret edin.';
 $strReplicationStatus = 'Kopya etme durumu';
@@ -1095,7 +1118,9 @@ $strSetupServers_AllowDeny_order_name = 'Anamakine kimlik denetimi düzeni';
 $strSetupServers_AllowDeny_rules_desc = 'Varsayılan için boş bırakın';
 $strSetupServers_AllowDeny_rules_name = 'Anamakine kimlik denetimi kuralları';
 $strSetupServers_AllowNoPassword_name = 'Parolasız oturum açmaya izin ver';
-$strSetupServers_AllowRoot_name = 'Root\'un oturum açmasına izin ver';
+$strSetupServers_AllowRoot_name = 'Root oturumu açmaya izin ver';
+$strSetupServers_auth_http_realm_desc = 'HTTP Kimlik Denetimi yaparken görüntülemek için Temel Kimlik Denetim alan adı';
+$strSetupServers_auth_http_realm_name = 'HTTP Alanı';
 $strSetupServers_auth_swekey_config_desc = '[a@http://swekey.com]SweKey donanımsal kimlik denetimi[/a] için yapılandırma dosyası yolu (belge kök klasörünüzde yer almaz; önerilen: /etc/swekey.conf)';
 $strSetupServers_auth_swekey_config_name = 'SweKey yapılandırma dosyası';
 $strSetupServers_auth_type_desc = 'Kullanmak için kimlik denetimi yöntemi';
@@ -1150,6 +1175,7 @@ $strSetupServers_SignonURL_name = 'Oturum açma URL\'si';
 $strSetupServerSslMsg = 'Eğer web sunucunuz destekliyorsa SSL bağlantı kullanmalısınız';
 $strSetupServers_socket_desc = 'MySQL sunucusunun dinlemede olduğu soket, varsayılan ayar için boş bırakın';
 $strSetupServers_socket_name = 'Sunucu soketi';
+$strSetupServers_ssl_desc = 'MySQL sunucusuna bağlantı için SSL etkin';
 $strSetupServers_ssl_name = 'SSL kullan';
 $strSetupServers_table_coords_desc = 'PDF şeması desteği istenmiyorsa boş bırakın, varsayılan: [kbd]pma_table_coords[/kbd]';
 $strSetupServers_table_coords_name = 'PDF şeması: tablo koordinatları';
@@ -1229,6 +1255,7 @@ $strShowingBookmark = 'İşaret gösteriliyor';
 $strShowingPhp = 'PHP kodu olarak gösteriliyor';
 $strShowingRecords = 'Satırlar gösteriliyor';
 $strShowingSQL = 'SQL sorgusu gösteriliyor';
+$strShowInsert = 'Ekleme sorgusunu göster';
 $strShowKeys = 'Sadece anahtarları göster';
 $strShowMasterStatus = 'Master durumunu göster';
 $strShowOpenTables = 'Açık tabloları göster';
@@ -1364,6 +1391,7 @@ $strSpanish = 'İspanyolca';
 $strSplitWordsWithSpace = 'Kelimeler boşlukla ayrılır (" ").';
 $strSQLCompatibility = 'SQL uyumluluk kipi';
 $strSQLExportType = 'Dışarı aktarma türü';
+$strSQLExportUTC = 'UTC olarak zamanı dışarı aktar';
 $strSQLParserBugMessage = 'SQL ayrıştırıcısında bir hata bulabilme ihtimaliniz var. Lütfen sorgunuzu yakından dikkatli bir şekilde gözden geçirin ve tırnakların doğru ve uyumsuz olmadığını kontrol edin. Diğer muhtemel hata nedenleri tırnaklı metin alanının dışında binari ile dosya gönderiyor olmanız olabilir. Aynı zamanda sorgunuzu MySQL komut satırı arabiriminde deneyebilirsiniz. Eğer hata varsa, aşağıdaki MySQL sunucu hata çıktısı, sorunu teşhis etmenizde ayrıca size yardımcı olabilir. Eğer hala sorunlarınız varsa ya da komut satırı arabirimi başarılı olduğunda ayrıştırıcı başarısızsa, lütfen sorunlara neden olan SQL sorgu girişinizi tek bir sorguya indirgeyin ve aşağıdaki CUT bölümü içindeki veri yığını ile birlikte hata raporunu gönderin:';
 $strSQLParserUserError = 'SQL sorgunuzda bir hata olduğu görünüyor. Eğer varsa, aşağıdaki MySQL sunucu hata çıktısı, sorunu teşhis etmenizde ayrıca size yardımcı olabilir.';
 $strSQLQuery = 'SQL sorgusu';
@@ -1436,6 +1464,7 @@ $strTableStructure = 'Tablo için tablo yapısı:';
 $strTable = 'Tablo:';
 $strTableUpdateRow = 'Sıra(ları)yı güncelle';
 $strTakeIt = 'Al';
+$strTargetDatabaseHasBeenSynchronized = 'Hedef veritabanı kaynak veritabanı ile eşitlendi';
 $strTblPrivileges = 'Tabloya özgü yetkiler';
 $strTempData = 'Geçici veri';
 $strTextAreaLength = 'Uzunluğu nedeniyle,<br /> bu alan düzenlenebilir olmayabilir ';
@@ -1463,8 +1492,9 @@ $strTotalUC = 'Toplam';
 $strTrackingActivated = '%s.%s izleme aktif.';
 $strTrackingActivateNow = 'Hemen aktif et';
 $strTrackingActivateTrackingFor = '%s.%s için izlemeyi aktif et';
-$strTrackingCreateVersionOf = '%s.%s için %s sürümü oluştur';
+$strTrackingCommentOut = 'Eğer ihtiyacınız yoksa bu iki satırı yorum dışı bırakın.';
 $strTrackingCreateVersion = 'Sürüm oluştur';
+$strTrackingCreateVersionOf = '%s.%s için %s sürümü oluştur';
 $strTrackingDatabaseLog = 'Veritabanı Günlüğü';
 $strTrackingDataDefinitionStatement = 'Veri tanımlama ifadesi';
 $strTrackingDataManipulationStatement = 'Veri işleme ifadesi';
@@ -1477,6 +1507,7 @@ $strTrackingIsNotActive = 'İzleme aktif değil.';
 $strTracking = 'İzleme';
 $strTrackingMechanism = 'İzleme Mekanizması';
 $strTrackingReportClose = 'Kapat';
+$strTrackingReportForTable = '`%s` tablosu için izleme raporu';
 $strTrackingReport = 'İzleme raporu';
 $strTrackingShowLogDateUsers = '%s tarihleriyle göster. %s ile %s arasını. %s %s kullanıcısı tarafından';
 $strTrackingShowVersions = 'Sürümleri göster';
@@ -1505,6 +1536,7 @@ $strTrackingVersionCreated = 'Sürüm %s oluşturuldu, %s.%s için izlenen aktif
 $strTrackingVersionDeactivated = '%s.%s için izleniyor, sürüm %s devre dışı.';
 $strTrackingVersionSnapshotSQL = 'Sürüm %s görüntüsü yakalama (SQL kodu)';
 $strTrackingVersions = 'Sürümler';
+$strTrackingYouCanExecute = 'Oluşturulan ve kullanılan geçici veritabanı tarafından yığını çalıştırabilirsiniz. Lütfen bunu yapmak için izinlerinizin olduğundan emin olun.';
 $strTraditionalChinese = 'Geleneksel Çince';
 $strTraditionalSpanish = 'Geleneksel İspanyolca';
 $strTraffic = 'Trafik';
@@ -1605,45 +1637,4 @@ $strYes = 'Evet';
 $strZeroRemovesTheLimit = 'Not: Bu seçeneklerin 0 (sıfır)\'a ayarlanması sınırı kaldırır.';
 $strZip = '"zip olarak"';
 
-// To translate:
-
-$strClickToSelect = 'Click to select';  //to translate
-$strClickToUnselect = 'Click to unselect';  //to translate
-
-$strDifference = 'Difference';  //to translate
-$strDumpAllRows = 'Dump all rows';  //to translate
-
-$strHaveBeenSynchronized = 'Selected target tables have been synchronized with source tables.';  //to translate
-
-$strNotPresent = 'not present';  //to translate
-
-$strQueriesExecuted = 'The following queries have been executed:';  //to translate
-
-$strSetupServers_ssl_desc = 'Enable SSL for connection to MySQL server';  //to translate
-
-$strTargetDatabaseHasBeenSynchronized = 'Target database has been synchronized with source database';  //to translate
-
-$strTrackingYouCanExecute = 'You can execute the dump by creating and using a temporary database. Please ensure that you have the privileges to do so.';  //to translate
-$strTrackingCommentOut = 'Comment out these two lines if you do not need them.';  //to translate
-$strTrackingReportForTable = 'Tracking report for table `%s`';  //to translate
-$strDeleteTrackingData = 'Delete tracking data for this table';  //to translate
-$strReplicationSlaveSQLThreadNotRunning = 'Slave SQL Thread not running!';  //to translate
-$strReplicationSlaveIOThreadNotRunning = 'Slave IO Thread not running!';  //to translate
-$strRenameView = 'Rename view to';  //to translate
-$strInsertIgnoreAsNewRow = 'Insert as new row and ignore errors';  //to translate
-$strJavascriptDisabled = 'Javascript support is missing or disabled in your browser, some phpMyAdmin functionality will be missing. For example navigation frame will not refresh automatically.';  //to translate
-$strSQLExportUTC = 'Export time in UTC';  //to translate
-$strShowInsert = 'Show insert query';  //to translate
-$strReloadNavi = 'Reload navigation frame';  //to translate
-$strNewTable = 'New table';  //to translate
-$strCreateNewTableShort = 'Create new table';  //to translate
-$strPmadbCreateHelp = 'Quick steps to setup advanced features:';  //to translate
-$strPmadbCreateTables = 'Create the needed tables with the <code>script/create_tables.sql</code>.';  //to translate
-$strPmadbCreateUser = 'Create a pma user and give access to these tables.';  //to translate
-$strPmadbCreateConfig = 'Enable advanced features in configuration file (<code>config.inc.php</code>), for example by starting from <code>config.sample.inc.php</code>.';  //to translate
-$strPDFPageCreated = 'Page has been created';  //to translate
-$strPDFPageCreateFailed = 'Page creation failed';  //to translate
-$strPmadbReLoginToEnable = 'Re-login to phpMyAdmin to load the updated configuration file.';  //to translate
-$strSetupServers_auth_http_realm_desc = 'HTTP Basic Auth Realm name to display when doing HTTP Auth';  //to translate
-$strSetupServers_auth_http_realm_name = 'HTTP Realm';  //to translate
 ?>
