@@ -46,6 +46,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to Harald Jenny - haraldj
 - bug #2954916 [interface] Do not insert doc links to not formatted SQL.
 + [lang] Chinese Simplified update, thanks to Shanyan Baishui - rimyxp 
++ [lang] Turkish update, thanks to Burak Yavuz
 
 3.3.1.0 (not yet released)
 - bug #2941037 [core] Database structure not sorted by table correctly 
